salle_service/deployment-salle-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salle-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salle-service
  template:
    metadata:
      labels:
        app: salle-service
    spec:
      containers:
      - name: salle-service
        image: oumaimansir/salle-service:latest
        ports:
        - containerPort: 8000
