salle_service/service-salle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salle-service
spec:
  selector:
    app: salle-service
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8000
  type: ClusterIP
