salle_service/ingress-salle-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salle-service-ingress
spec:
  rules:
  - host: salle-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: salle-service
            port:
              number: 8003
